--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -1,8 +1,10 @@
 #header {
+  margin-top: -100px;
   width: 100%;
   height: 100px;
-
-  background-color: #3a0ca3;
+  position: absolute;
+  z-index: 1;
+  background-image: linear-gradient(to left, #3a0ca3, #7209b7, #b5179e);
   color: white;
   font-size: 32px;
   font-weight: bold;
@@ -11,7 +13,7 @@
   align-items: center;
 }
 
-h3 {
+h3#title {
   width: 400px;
   margin-left: 30px;
 }
