--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -6,7 +6,15 @@
   border: 0;
 }
 
-body {
-  font: 400 14px Roboto, sans-serif;
+body,
+input,
+button,
+select,
+textarea {
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
+}
+
+div#app {
+  height: 100%;
 }
