--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -45,3 +45,11 @@ button#signin {
   color: white;
   width: 160px;
 }
+
+button#logout {
+  border-radius: 4px;
+  width: 90px;
+  height: 50px;
+  background-color: #7209b7;
+  color: white;
+}
