--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -18,3 +18,10 @@ textarea {
 div#app {
   height: 100%;
 }
+
+.error-message {
+  text-align: center;
+  margin-bottom: 10px;
+  color: red;
+  font-size: medium;
+}
