--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -1,8 +1,8 @@
 #header {
-  margin-top: -100px;
   width: 100%;
-  height: 100px;
+  height: 10vh;
   position: absolute;
+  top: 0;
   z-index: 1;
   background-image: linear-gradient(to left, #3a0ca3, #7209b7, #b5179e);
   color: white;
